python/testData/highlighting/exceptClauseMissingParentheses.py
def f():
    try:
        pass
    except <error descr="Parentheses are required when specifying a target for multiple exception classes">ValueError, TypeError</error> as e:
        pass